admin doc added

--- a/{{cookiecutter.project_slug}}/config/settings/base.py.jinja
+++ b/{{cookiecutter.project_slug}}/config/settings/base.py.jinja
@@ -95,6 +95,9 @@ THIRD_PARTY_APPS = [
 ]
 
 LOCAL_APPS = [
+    {%- for app in local_apps %}
+    "{{ cookiecutter.project_slug }}.{{ app }}",
+    {%- endfor %}
     "{{ cookiecutter.project_slug }}.users",
     "{{ cookiecutter.project_slug }}.base",
     'jet.dashboard',
